<resources>
    <string name="empty" translatable="false" />
    <string name="item_sep" translatable="false">|</string>

    <!-- Common -->
    <string name="app_name">Old owl</string>

    <string name="favorite_title">Favorite</string>
    <string name="all_title">All</string>

    <string name="favorite_article">Favorite article</string>
    <string name="unread_more_hundred">99+</string>
    <string name="never">Never</string>

    <string name="search">Search</string>

    <string name="search_hint">Search</string>

    <string name="undo">Undo</string>

    <string name="network_unavailable_error">Network unavailable</string>

    <!-- Login -->
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="email_error">Email is required</string>
    <string name="password">Password</string>
    <string name="password_error">Password is required</string>
    <string name="authentication_error">Email or password isn\'t valid</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up to TheOldReader</string>

    <!-- Navigation -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="nav_all">All</string>
    <string name="nav_unread">Unread</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="nav_add_subscription">Add subscription</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="nav_last_sync_date">Last sync date: %s</string>
    <string name="nav_last_sync_date_not_sync">Last sync date: not sync yet</string>

    <!-- Article list -->
    <string name="hide_read">Hide read</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_read">Delete all read</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="sync">Sync</string>

    <string name="empty_state_article_title">No articles</string>
    <string name="empty_state_article_message">Pull down to refresh</string>

    <string name="empty_state_favorite_title">No favorite articles yet</string>
    <string name="empty_state_favorite_message">Click the \'Star\' button on any article to add a favorite</string>

    <string name="mark_all_read_snackbar">Marked as read: %d</string>
    <string name="delete_articles_snackbar">Deleted articles: %d</string>
    <string name="unsubscribe_snackbar">You unsubscribed from %s</string>

    <!-- Article detail -->
    <string name="mark_favorite">Mark favorite</string>
    <string name="unmark_favorite">Unmark favorite</string>
    <string name="toggle_read">Toggle read</string>
    <string name="copy_url_to_clipboard">Copy url to clipboard</string>
    <string name="copy_url_to_clipboard_snackbar">The url copied to clipboard</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>

    <!-- Add subscription -->
    <string name="add_subscription_success">The %s was added</string>
    <string name="add_subscription_error">Error adding subscription</string>
    <string name="search_subscription_error">Error searching subscriptions</string>

    <string name="notification_general_channel_name">General</string>
    <string name="notification_new_article_title">New articles: %d</string>
    <string name="notification_new_article_text">Tap to start reading</string>

    <string name="add_subscription_search_hint">Enter keyword</string>

    <string name="empty_state_search_item_title">No search result</string>
    <string name="empty_state_search_item_text">Please, check search query</string>

    <!-- Settings -->
    <string name="settings_general">General</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_other">Other</string>

    <string name="auto_update">Auto update</string>
    <string name="auto_update_period">Auto update period</string>
    <string name="hide_read_summary">If this options is enabled, the read articles won\'t be displayed</string>
    <string name="auto_update_summary">The subscriptions will update automatically</string>
    <string name="auto_cleanup_read_articles">Auto cleanup a read articles</string>
    <string name="auto_cleanup_unread_articles">Auto cleanup a unread articles</string>
    <string name="current_summary">Current: %s</string>

    <string name="version_name">Version name</string>
    <string name="send_feedback">Send feedback</string>

    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="four_hours">4 hours</string>
    <string name="eight_hours">8 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>

    <string name="one_day">One day</string>
    <string name="two_days">Two days</string>
    <string name="three_days">Three days</string>
    <string name="one_week">One week</string>
    <string name="two_weeks">Two weeks</string>
    <string name="three_weeks">Three weeks</string>
    <string name="one_month">One month</string>
    <string name="nav_exit">Exit</string>

    <!-- Dialog -->
    <string name="warning_dialog_title">Warning</string>
    <string name="delete_all_dialog_message">Are you sure you want to delete all articles?</string>
    <string name="delete_all_read_dialog_message">Are you sure you want to delete all read articles?</string>
    <string name="delete_unsubscribe_dialog_message">Are you sure you want to unsubscribe from this subscription?</string>
    <string name="yes_dialog_button">Yes</string>
    <string name="no_dialog_button">No</string>

    <!-- Error -->
    <string name="something_went_wrong_error">Oops, something went wrong. Try again!</string>
</resources>
