<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.oldowl.viewmodel.MainViewModel" />

        <variable
            name="recyclerConfig"
            type="ru.oldowl.core.binding.RecyclerConfig" />

        <variable
            name="onAllPage"
            type="Runnable" />

        <variable
            name="onFavoritePage"
            type="Runnable" />

        <variable
            name="onAddSubscription"
            type="Runnable" />

        <variable
            name="onSettings"
            type="Runnable" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <LinearLayout
            style="@style/ContentFullParent"
            android:orientation="vertical">

            <include
                android:id="@+id/navigation_header"
                layout="@layout/navigation_header" />

            <View style="@style/VerticalDivider" />

            <TextView
                style="@style/NavItem"
                android:drawableStart="@drawable/ic_home"
                android:text="@string/nav_all"
                android:onClick="@{onAllPage}" />

            <TextView
                style="@style/NavItem"
                android:text="@string/nav_favorite"
                android:drawableStart="@drawable/ic_bookmark"
                android:onClick="@{onFavoritePage}" />

            <LinearLayout
                style="@style/ContentFullWidth.Vertical"
                android:visibility="@{viewModel.hasItems ? view.VISIBLE : view.GONE}">

                <View style="@style/VerticalDivider" />

                <TextView
                    style="@style/NavSubHeader"
                    android:text="@string/nav_subscriptions" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subscription_list"
                    style="@style/ContentFullWidth"
                    config="@{recyclerConfig}"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/view_subscription_item" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <TextView
                style="@style/NavItem"
                android:text="@string/nav_add_subscription"
                android:drawableStart="@drawable/ic_rss_feed"
                android:onClick="@{onAddSubscription}" />

            <TextView
                style="@style/NavItem"
                android:text="@string/nav_settings"
                android:drawableStart="@drawable/ic_settings"
                android:onClick="@{onSettings}"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>