<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddSubscriptionActivity">

    <data>

        <variable
            name="viewModel"
            type="ru.oldowl.viewmodel.AddSubscriptionViewModel" />

        <variable
            name="recyclerConfig"
            type="ru.oldowl.core.binding.RecyclerConfig" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/ContentFullParent">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/ContentFullWidth"
            android:elevation="@dimen/default_elevation">

            <include layout="@layout/toolbar" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_small"
                android:layout_marginBottom="@dimen/indent_small"
                android:hint="@string/add_subscription_search_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchField"
                    style="@style/ContentFullWidth"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:drawablePadding="@dimen/indent_small"
                    android:layout_marginStart="@dimen/indent_small" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            style="@style/ContentFullParent"
            enable="@{viewModel.dataLoading}"
            refreshing="@{viewModel.dataLoading}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                style="@style/ContentFullParent.Vertical">

                <View
                    style="@style/VerticalDivider"/>

                <androidx.recyclerview.widget.RecyclerView
                    config="@{recyclerConfig}"
                    style="@style/ContentFullParent" />

                <LinearLayout
                    android:id="@+id/empty_view"
                    style="@style/EmptyState">

                    <ImageView
                        style="@style/EmptyState.Image"
                        android:src="@drawable/ic_search_black_24dp" />

                    <TextView
                        style="@style/EmptyState.Title"
                        android:text="@string/empty_state_search_item_title" />

                    <TextView
                        style="@style/EmptyState.Text"
                        android:text="@string/empty_state_search_item_text"/>

                </LinearLayout>
            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>